rails_apps_composer: add README files

--- a/README
+++ b/README
@@ -1,4 +1,65 @@
-RECIPES
-["core", "deployment", "devise", "email", "extras", "frontend", "gems", "git", "init", "learn_rails", "locale", "omniauth", "pages", "rails_bootstrap", "rails_devise", "rails_devise_pundit", "rails_foundation", "rails_omniauth", "rails_signup_download", "railsapps", "readme", "roles", "setup", "tests"]
-PREFERENCES
-{:git=>true, :apps4=>"none", :dev_webserver=>"webrick", :prod_webserver=>"same", :database=>"sqlite", :templates=>"erb", :tests=>"none", :frontend=>"bootstrap3", :email=>"none", :authentication=>"omniauth", :omniauth_provider=>"facebook", :authorization=>"pundit", :form_builder=>"simple_form", :pages=>"about+users"}
+Missesprit
+========================
+
+This application was generated with the rails_apps_composer gem:
+https://github.com/RailsApps/rails_apps_composer
+provided by the RailsApps Project:
+http://railsapps.github.io/
+
+________________________
+
+Recipes:
+
+* core
+* deployment
+* devise
+* email
+* extras
+* frontend
+* gems
+* git
+* init
+* learn_rails
+* locale
+* omniauth
+* pages
+* rails_bootstrap
+* rails_devise
+* rails_devise_pundit
+* rails_foundation
+* rails_omniauth
+* rails_signup_download
+* railsapps
+* readme
+* roles
+* setup
+* tests
+
+Preferences:
+
+* git: true
+* apps4: none
+* dev_webserver: webrick
+* prod_webserver: same
+* database: sqlite
+* templates: erb
+* tests: none
+* frontend: bootstrap3
+* email: none
+* authentication: omniauth
+* omniauth_provider: facebook
+* authorization: pundit
+* form_builder: simple_form
+* pages: about+users
+* locale: fr
+* rvmrc: false
+* quiet_assets: true
+* local_env_file: figaro
+* better_errors: true
+* pry: true
+* ban_spiders: true
+* github: true
+
+________________________
+
+License
